[package]
name = "rusty_love_divide"
version = "0.1.0"
edition = "2021"
authors = ["Sharad Gupta <gsharad007@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/gsharad007/rusty_love_divide/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
itertools = { version = "0.10" }

[profile.release]
opt-level = 3
# lto seems to blow up some benchmarks
# lto = true